Menambahkan school model beserta relasi, dan juga endpoint baru untuk list schools
