# controllers/profileController.js
@@ -4,7 +4,7 @@ const prisma = new PrismaClient();
 
 const addProfile = async (req, res) => {
   try {
-    const { nama, namaIstri, namaAnak, namaKuttab, tahunMasukKuttab, bio } =
+    const { nama, namaIstri, namaAnak, namaKuttab, tahunMasukKuttab, bio, schoolId } =
       req.body;
     const userId = req.userId;
 
@@ -12,9 +12,9 @@ const addProfile = async (req, res) => {
       !nama ||
       !namaIstri ||
       !namaAnak ||
-      !namaKuttab ||
       !tahunMasukKuttab ||
-      !bio
+      !bio ||
+      (!namaKuttab && !schoolId)
     ) {
       return res
         .status(400)
@@ -22,6 +22,7 @@ const addProfile = async (req, res) => {
     }
 
     const tahunMasukKuttabInt = parseInt(tahunMasukKuttab);
+    const parsedSchoolId = schoolId ? parseInt(schoolId) : null;
 
     const user = await prisma.user.findUnique({
       where: { id: userId },
@@ -48,6 +49,7 @@ const addProfile = async (req, res) => {
           tahunMasukKuttab: tahunMasukKuttabInt,
           bio,
           photo: photoFilename,
+          ...(parsedSchoolId !== null && { schoolId: parsedSchoolId })
         },
       });
       return res.json({ message: "Profile updated successfully." });
@@ -63,6 +65,7 @@ const addProfile = async (req, res) => {
           bio,
           photo: photoFilename,
           user: { connect: { id: userId } },
+          ...(parsedSchoolId !== null && { school: { connect: { id: parsedSchoolId } } })
         },
       });
       return res.json({ message: "Profile added successfully." });
@@ -75,11 +78,12 @@ const addProfile = async (req, res) => {
 
 const editProfile = async (req, res) => {
   try {
-    const { nama, namaIstri, namaAnak, namaKuttab, tahunMasukKuttab, bio } =
+    const { nama, namaIstri, namaAnak, namaKuttab, tahunMasukKuttab, bio, schoolId } =
       req.body;
     const userId = req.userId;
 
     const tahunMasukKuttabInt = parseInt(tahunMasukKuttab);
+    const parsedSchoolId = schoolId ? parseInt(schoolId) : null;
 
     const existingProfile = await prisma.profile.findUnique({
       where: { userId },
@@ -106,6 +110,7 @@ const editProfile = async (req, res) => {
         tahunMasukKuttab: tahunMasukKuttabInt,
         photo: photoFilename,
         bio,
+        ...(parsedSchoolId !== null && { schoolId: parsedSchoolId })
       },
     });
 
@@ -131,6 +136,7 @@ const getProfile = async (req, res) => {
         namaAnak: true,
         namaKuttab: true,
         tahunMasukKuttab: true,
+        school: true,
       },
     });
 
@@ -175,7 +181,11 @@ const getUserNProfile = async (req, res) => {
     const user = await prisma.user.findUnique({
       where: { id: userId },
       include: {
-        profile: true,
+        profile: {
+          include: {
+            school: true
+          }
+        },
       },
     });
 
