# swagger-output.json
@@ -572,29 +572,6 @@
         }
       }
     },
-    "/user/{save-token{where{id:user.id}}": {
-      "delete": {
-        "tags": [
-          "User Controller"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": null,
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
-    },
     "/profile/add-profile": {
       "post": {
         "tags": [
@@ -641,6 +618,9 @@
                   },
                   "namaKuttab": {
                     "type": "string"
+                  },
+                  "schoolId": {
+                    "type": "integer"
                   },
                   "tahunMasukKuttab": {
                     "type": "integer"
@@ -701,6 +681,9 @@
                   },
                   "namaKuttab": {
                     "type": "string"
+                  },
+                  "schoolId": {
+                    "type": "integer"
                   },
                   "tahunMasukKuttab": {
                     "type": "integer"
@@ -1782,29 +1765,6 @@
         }
       }
     },
-    "/news/{{where{id:newsId}}": {
-      "delete": {
-        "tags": [
-          "News Controller"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": null,
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
-    },
     "/post/": {
       "post": {
         "tags": [
@@ -2060,29 +2020,6 @@
         }
       }
     },
-    "/post/{{where{id:postId}}": {
-      "delete": {
-        "tags": [
-          "Post Controller"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": null,
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
-    },
     "/comment/{postId}": {
       "get": {
         "tags": [
@@ -2290,29 +2227,6 @@
           },
           "500": {
             "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/comment/{postId{where:{id:commentId}}": {
-      "delete": {
-        "tags": [
-          "Comment Controller"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": null,
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "401": {
-            "description": "Unauthorized"
           }
         }
       }
@@ -2546,29 +2460,6 @@
           },
           "500": {
             "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/reply/{commentId{where:{id:replyId}}": {
-      "delete": {
-        "tags": [
-          "Reply Controller"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": null,
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "401": {
-            "description": "Unauthorized"
           }
         }
       }
@@ -3148,46 +3039,6 @@
         }
       }
     },
-    "/playlist/{{where{id:parseInt(id)}}": {
-      "delete": {
-        "description": "",
-        "parameters": [
-          {
-            "name": null,
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
-    },
-    "/playlist/{{where{contentId_playlistId:{contentId:parseInt(contentId)}": {
-      "delete": {
-        "description": "",
-        "parameters": [
-          {
-            "name": null,
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
-    },
     "/books/donation/{id}": {
       "get": {
         "tags": [
@@ -3745,29 +3596,6 @@
         }
       }
     },
-    "/categories/{{where{id:parseInt(id)}}": {
-      "delete": {
-        "tags": [
-          "Categories Controller"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": null,
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
-    },
     "/comment-book/{bookId}": {
       "post": {
         "tags": [
@@ -3899,29 +3727,6 @@
           },
           "500": {
             "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/comment-book/{bookId{where:{id:commentId}": {
-      "delete": {
-        "tags": [
-          "Comment Book Controller"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": null,
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "401": {
-            "description": "Unauthorized"
           }
         }
       }
@@ -4739,6 +4544,48 @@
         }
       }
     },
+    "/schools/": {
+      "get": {
+        "tags": [
+          "School"
+        ],
+        "description": "Mendapatkan semua daftar sekolah untuk digunakan di dropdown profil.",
+        "responses": {
+          "200": {
+            "description": "Daftar sekolah berhasil diambil.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "id": {
+                            "type": "integer"
+                          },
+                          "name": {
+                            "type": "string"
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/admin/peminjaman-buku/": {
       "get": {
         "tags": [
@@ -5077,6 +4924,162 @@
                 }
               }
             }
+          }
+        }
+      }
+    },
+    "/admin/schools/": {
+      "post": {
+        "tags": [
+          "Admin - School"
+        ],
+        "description": "Menambahkan sekolah baru ke dalam database.",
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string",
+                    "description": "Nama Sekolah"
+                  }
+                },
+                "required": [
+                  "name"
+                ]
+              }
+            }
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Admin - School"
+        ],
+        "description": "Mendapatkan semua daftar sekolah yang ada.",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/admin/schools/{id}": {
+      "put": {
+        "tags": [
+          "Admin - School"
+        ],
+        "description": "Memperbarui nama sekolah berdasarkan ID.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "ID Sekolah"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string",
+                    "description": "Nama Sekolah Baru"
+                  }
+                },
+                "required": [
+                  "name"
+                ]
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Admin - School"
+        ],
+        "description": "Menghapus sekolah berdasarkan ID.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "ID Sekolah"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
